# dbt_cookiecutter

./: Makefile  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: post-devenv-start.sh  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_name}}/dbt/: dbt_project.yml  profiles.yml
{{cookiecutter.project_name}}/dbt/models/staging/: staging.yml
