[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dbt-core = "1.2.2"
dbt-bigquery = "^1.2.0"
dbt-osmosis = "^0.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
